# serializer version: 1
# name: test_milestones_ur[is-paper-no-complete-check-vollstaendigkeitspruefung-complete-False-Sekretariat der Gemeindebaubeh\xf6rde]
  dict({
    'sections': list([
      dict({
        'fields': list([
          dict({
            'label': 'Dossier erfasst',
            'slug': 'instance-submitted',
            'value': '2023-01-01T19:00:00Z',
          }),
          dict({
            'label': 'Eingang Post',
            'slug': 'paper-submission',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Nachforderung Gemeindebaubehörde',
            'slug': 'additional-demand',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'check-completed',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'instance-complete',
            'value': '2023-01-01T19:00:00Z',
          }),
          dict({
            'label': 'Prüfung durch Gemeinde',
            'slug': 'review-building-commission',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Start Zirkulation',
            'slug': 'start-circulation',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Zirkulation beendet',
            'slug': 'distribution-completed',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Stellungnahme - Vorentscheid',
            'slug': 'decision',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Geometer',
            'slug': 'notice-to-geometer',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Gebäudeschätzung',
            'slug': 'notice-to-gebaeudeschaetzung',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Baubewilligung gültig bis',
            'slug': 'building-permit-valid-until',
            'value': '2024-01-01T19:00:00Z',
          }),
        ]),
        'label': 'Ordentliches Verfahren',
        'slug': 'regular-process',
      }),
    ]),
  })
# ---
# name: test_milestones_ur[is-paper-no-complete-check-vollstaendigkeitspruefung-incomplete-False-Sekretariat der Gemeindebaubeh\xf6rde]
  dict({
    'sections': list([
      dict({
        'fields': list([
          dict({
            'label': 'Dossier erfasst',
            'slug': 'instance-submitted',
            'value': '2023-01-01T19:00:00Z',
          }),
          dict({
            'label': 'Eingang Post',
            'slug': 'paper-submission',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Nachforderung Gemeindebaubehörde',
            'slug': 'additional-demand',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'check-completed',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'instance-complete',
            'value': '2023-01-01T19:00:00Z',
          }),
          dict({
            'label': 'Prüfung durch Gemeinde',
            'slug': 'review-building-commission',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Start Zirkulation',
            'slug': 'start-circulation',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Zirkulation beendet',
            'slug': 'distribution-completed',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Stellungnahme - Vorentscheid',
            'slug': 'decision',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Geometer',
            'slug': 'notice-to-geometer',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Gebäudeschätzung',
            'slug': 'notice-to-gebaeudeschaetzung',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Baubewilligung gültig bis',
            'slug': 'building-permit-valid-until',
            'value': '2024-01-01T19:00:00Z',
          }),
        ]),
        'label': 'Ordentliches Verfahren',
        'slug': 'regular-process',
      }),
    ]),
  })
# ---
# name: test_milestones_ur[is-paper-no-complete-check-vollstaendigkeitspruefung-incomplete-True-Sekretariat der Gemeindebaubeh\xf6rde]
  dict({
    'sections': list([
      dict({
        'fields': list([
          dict({
            'label': 'Dossier erfasst',
            'slug': 'instance-submitted',
            'value': '2023-01-01T19:00:00Z',
          }),
          dict({
            'label': 'Eingang Post',
            'slug': 'paper-submission',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Nachforderung Gemeindebaubehörde',
            'slug': 'additional-demand',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'check-completed',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'instance-complete',
            'value': None,
          }),
          dict({
            'label': 'Prüfung durch Gemeinde',
            'slug': 'review-building-commission',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Start Zirkulation',
            'slug': 'start-circulation',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Zirkulation beendet',
            'slug': 'distribution-completed',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Stellungnahme - Vorentscheid',
            'slug': 'decision',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Geometer',
            'slug': 'notice-to-geometer',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Gebäudeschätzung',
            'slug': 'notice-to-gebaeudeschaetzung',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Baubewilligung gültig bis',
            'slug': 'building-permit-valid-until',
            'value': '2024-01-01T19:00:00Z',
          }),
        ]),
        'label': 'Ordentliches Verfahren',
        'slug': 'regular-process',
      }),
    ]),
  })
# ---
# name: test_milestones_ur[is-paper-yes-complete-check-vollstaendigkeitspruefung-complete-False-Sekretariat der Gemeindebaubeh\xf6rde]
  dict({
    'sections': list([
      dict({
        'fields': list([
          dict({
            'label': 'Dossier erfasst',
            'slug': 'instance-submitted',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Eingang Post',
            'slug': 'paper-submission',
            'value': '2023-01-01T19:00:00Z',
          }),
          dict({
            'label': 'Nachforderung Gemeindebaubehörde',
            'slug': 'additional-demand',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'check-completed',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Dossier vollstandig',
            'slug': 'instance-complete',
            'value': '2023-01-01T19:00:00Z',
          }),
          dict({
            'label': 'Prüfung durch Gemeinde',
            'slug': 'review-building-commission',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Start Zirkulation',
            'slug': 'start-circulation',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Zirkulation beendet',
            'slug': 'distribution-completed',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Stellungnahme - Vorentscheid',
            'slug': 'decision',
            'value': list([
              '2023-01-01T19:00:00Z',
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Geometer',
            'slug': 'notice-to-geometer',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Meldung Baubewilligung an Gebäudeschätzung',
            'slug': 'notice-to-gebaeudeschaetzung',
            'value': list([
            ]),
          }),
          dict({
            'label': 'Baubewilligung gültig bis',
            'slug': 'building-permit-valid-until',
            'value': '2024-01-01T19:00:00Z',
          }),
        ]),
        'label': 'Ordentliches Verfahren',
        'slug': 'regular-process',
      }),
    ]),
  })
# ---
